# dnn_study

./: .gitignore  .instructions.md  3x3_models.ipynb  AGENTS.md  CLAUDE.md  PHASE7_MULTINODE.md  PHASE7_QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  REFACTORING_TEMPLATES.md  TODO.md  TinyHybridNet_QAT(1).ipynb  alexnet_qat.ipynb  alexnet_qat_wandb_results_analysis.ipynb  environment.yml  imagenet_models.ipynb  imagenet_models2.ipynb  ml_utils.py  pyproject.toml  requirements.txt  run_experiments.sh  slurm-804771.out  slurm-804897.out  slurm-805448.out  slurm-805538.out  slurm-805541.out  slurm-805542.out  slurm-805932.out  slurm-805937.out  slurm-805948.out  slurm-805950.out  slurm-805987.out  slurm-805990.out  slurm-805993.out  slurm-806121.out  slurm-806122.out  slurm-806123.out  slurm-806216.out  tiny_hybridnet_qat.ipynb  (+3 more)
configs/: compression.yaml  data.yaml  detection.yaml  loader.py  profiling.yaml  qat.yaml  training.yaml
docs/: PHASE7_LOG.md  PHASE7_MULTINODE.md  PHASE7_QUICKSTART.md
ideas/: BEST_MODELS.md  MODELS.md  PHASE6_PLAN.md  PHASE7_LOG.md  PHASE7_PLAN.md  PHASE8_PLAN.md  PHASE9_PLAN.md
ml/: __init__.py  checkpoint.py  config.py  data.py  det_seg_data.py  det_seg_models.py  det_seg_trainer.py  model_registrations.py  profiling.py  pruning.py  quantization.py  quantization_advanced.py  registry.py  reporting.py  runtime.py  trainer.py
models/: __init__.py  alexnet.py  alexnet3x3.py  alexnet_smallkernel.py  alexnet_variants.py  baselines.py  compensation.py  efficient_cnns.py  final_architecture.py  hybrids.py  (+1 more)
(+390 files in other folders)
