[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexnet-rafael"
version = "0.1.0"
description = "PCAD-ready training infrastructure for CNN kernel research"
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ml*", "models*", "scripts*"]
